app/assets/stylesheets/maestro/themes/targetsolutions_theme.scss
@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic);

$color-navbar-primary: #2689BF;
$color-navbar-primary-dark: darken($color-navbar-primary, 5%);
$color-navbar-secondary: #444;
$color-navbar-secondary-dark: darken($color-navbar-secondary, 5%);
$color-sidenav-primary: #686868;
$color-sidenav-primary-dark: #444;
$sidenav-width: 55px;
$sidenav-width-expanded: 241px;

html {
  font-family: sans-serif; // 1
  -ms-text-size-adjust: 100%; // 2
  -webkit-text-size-adjust: 100%; // 2
}

body {
  margin: 0;
}

.nav-container {
  @import 'shared/bootstrap';
  font-size: 13px;

  // navbar
  .navbar {
    border: none;
    border-radius: 0;
    font-size: 13px;
    min-height: 40px;
    margin-bottom: 0;

    .nav {
      li {
        a {
          padding-bottom: 10px;
          padding-top: 10px;
          color: #fff;
          &:hover {
            color: #fff;
          }
        }
      }

      .dropdown {
        .caret {
          display: inline-block;
          margin-left: 5px;
        }

        .dropdown-menu > li > a {
          color: #000;
          @media (max-width: 767px) {
            color: #fff;
          }
          font-size: 13px;
          padding-bottom: 5px;
          padding-top: 5px;
        }

        .dropdown-menu > .active > a {
          background-color: #ddd;
          color: #000;
        }
      }
    }
  }

  #navbar--top {
    background-color: $color-navbar-secondary;

    .navbar-brand {
      color: #fff;
      font-size: 13px;
      height: 40px;
      padding: 10px 15px;
    }

    .navbar-brand,
    .navbar-nav {
      margin: 0 !important;
    }

    .navbar-right {
      float: right !important;
    }

    .dropdown:hover,
    .dropdown:active,
    .dropdown:focus,
    .dropdown.open {
      & > a {
        background-color: $color-navbar-secondary-dark;
      }
    }

    .navbar-toggle {
      padding: 4px 10px;
    }
  }

  #navbar--bottom {
  background-color: $color-navbar-primary;

    .navbar-nav {
      & > li {
        & > a {
          color: #fff !important;

          &:hover {
            background-color: $color-navbar-primary-dark;
          }
        }
      }
      & > li.active {
        & > a {
          background-color: $color-navbar-primary-dark;
        }
      }
      .dropdown.open {
        background-color: $color-navbar-primary-dark;
        color: #fff;
        & > a {
          background-color: $color-navbar-primary-dark;
        }
      }
    }
  }

  #container--main {
    padding: 0;
  }

  &#sidenav {
    color: #fff;
    float: left;
    // margin-left: -15px;
    position: absolute;
    width : $sidenav-width;
    z-index: 5;

    .container &,
    .container-fluid & {
      margin-left: -15px;
    }

    &.home {
      width: $sidenav-width-expanded;
      .hidden-text { display: inline; }
      ul {
        &.collapse {
          max-height: 999px;
          transition: all 1.5s;
          &.in {transition: all 1.5s;}
        }
        ul a { padding-left: 40px; }
      }

      nav {
        width: $sidenav-width-expanded!important;
      }
    }

    nav {
      background-color: $color-sidenav-primary;
      width: $sidenav-width;
      transition: width 0.1s;

      .hidden-text { display: none; }
      &:hover {
        width: $sidenav-width-expanded;
        .hidden-text { display: inline; }
        ul {
          &.collapse {
            max-height: 999px;
            transition: all 1.5s;
            &.in {transition: all 1.5s;}
          }
          ul a { padding-left: 40px; }
        }
      }
      a {
        color: #fff;
        display: block;
        padding: 15px 12px;
        text-decoration: none;
        white-space: nowrap !important;
        i:first-of-type {
          margin-right: 15px;
          width: 30px;
        }
        i.fa-chevron-down {
          float: right;
          position: relative;
          top: 0.25em;
        }
      }
      ul {
        list-style-type: none;
        padding-left: 0;
        &.collapse {
          max-height: 0px;
          overflow: hidden;
          transition: all 0s;
        }
      }
      li {
        display: block;

        &.active {
          background-color: lighten($color-sidenav-primary-dark, 8%);
          > a {
            background-color: $color-sidenav-primary-dark !important;
          }
          a { border-left: 4px solid $color-navbar-primary; }
        }
        > a {
          &:hover {
            background-color: lighten($color-sidenav-primary-dark, 8%);
          }
        }
      }
      > ul {
        > li {
          > a > .text {
            position: relative;
            top: -0.5em;
          }
        }
      }
    }
  }

  #sidenav__avatar {
    height: 200px;
    width: 241px;
    background-color: $color-sidenav-primary;

    a {
      background: #000;
      -webkit-border-radius: 0;
      -webkit-background-clip: padding-box;
      -moz-border-radius: 0;
      -moz-background-clip: padding;
      border-radius: 0;
      background-clip: padding-box;
      color: #fff;
      font-size: 15px;
      opacity: 1;
      padding: 8px 1px 7px 3px;
      width: 30px;
      height: 30px;
      line-height: 10px;
      position: absolute;
      z-index: 3;
      right: 0;
      top: 0;
      display: none;
    }


    &:hover {
      a {
        display: block;
      }
    }
  }

  #footer {
    background-color: $color-navbar-secondary;

    .navbar-nav:first-child a {
      padding-bottom: 8px;
      padding-top: 12px;
    }

    .navbar-right {
      span {
        background-image: url("http://app.targetsolutions.com/tsapp/dashboard/pl_fb/library/images/pro/targetsolutions.png");
      }
    }
  }
}

#page-contents { padding-left: $sidenav-width; }


// THEMES

$colorProfiles: (
  city: #B24D3E,
  default: #2689BF,
  enterprise: #745BC3,
  enterpriseBlack: #111,
  enterprisePurple: #745BC3,
  fire: #ba3737,
  lawenforcement: #334F77,
  policeone: #334f77,
  risk: #B24D3E,
  school: #589972,
  sdrma: #C8A24B,
  water: #2689BF,
);

@each $name, $color in $colorProfiles {
  $color-dark: darken($color, 5%);

  #navbar.#{$name} {
    #navbar--bottom {
      background-color: $color;

      .navbar-nav {
        & > li > a:hover,
        & > li.active > a,
        .dropdown.open,
        .dropdown.open > a { background-color: $color-dark; }
      }
    }
  }

  #sidenav.#{$name} nav li.active a {
    border-left: 4px solid $color;
  }
}


.notification-container {
  background-color: #fff;
  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  max-width: 402px;
  width: 402px;
}
.notification-heading {
  background: #444;
  -webkit-border-top-left-radius: 6px;
  -moz-border-radius-topleft: 6px;
  border-top-left-radius: 6px;
  -webkit-border-top-right-radius: 6px;
  -webkit-background-clip: padding-box;
  -moz-border-radius-topright: 6px;
  -moz-background-clip: padding;
  border-top-right-radius: 6px;
  background-clip: padding-box;
  color: #fff;
  font-weight: bold;
  height: 35px;
  line-height: 35px;
  padding: 0 0 0 12px;
}
.notification-content {
  padding: 0;
}
.notification-content ul {
  margin: 0;
  padding: 0;
}
.notification-content ul li {
  -webkit-border-radius: 0;
  -webkit-background-clip: padding-box;
  -moz-border-radius: 0;
  -moz-background-clip: padding;
  border-radius: 0;
  background-clip: padding-box;
  border-bottom: 1px solid #ddd;
  border-left: none;
  border-right: none;
  clear: both;
  overflow: auto;
  padding: 8px;
}
.notification-content ul li a {
  border: none;
  color: #333333;
  font-size: 13px;
  line-height: 22.75px;
  padding: 0;
}
.notification-content ul li a:hover {
  background: #efefef;
}
.notification-content ul li .icon-24 {
  display: inline-block;
  float: none;
  margin: 0 6px 0 0;
  vertical-align: middle;
  width: 25px;
}
.notification-content ul li .titleAlt {
  color: #333333;
  display: inline-block;
  font-size: 13px;
  font-weight: normal;
  line-height: 1.5;
  vertical-align: middle;
  width: 330px;
}
.notification-content ul li:first-child {
  border-top: none;
}
.notification-content ul li:last-child {
  border-bottom: none;
}
.notification-content ul li:last-child a {
  color: #337ab7;
  font-weight: normal;
}
.notification-content ul li:hover {
  background-color: #efefef;
}
.navbar-notifications.highlight {
  color: #ffff00 !important;
}
.navbar-notifications.highlight .badge {
  background-color: #ffff00 !important;
  color: #000 !important;
}
.popover {
  background-color: #fff;
  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
  max-width: 402px;
  width: 402px;
}
.popover .popover-title {
  background: #444;
  -webkit-border-top-left-radius: 6px;
  -moz-border-radius-topleft: 6px;
  border-top-left-radius: 6px;
  -webkit-border-top-right-radius: 6px;
  -webkit-background-clip: padding-box;
  -moz-border-radius-topright: 6px;
  -moz-background-clip: padding;
  border-top-right-radius: 6px;
  background-clip: padding-box;
  color: #fff;
  font-weight: bold;
  height: 35px;
  line-height: 35px;
  padding: 0 0 0 12px;
}
.popover .popover-content {
  padding: 0;
}
.popover .popover-content ul {
  margin: 0;
  padding: 0;
}
.popover .popover-content ul li {
  -webkit-border-radius: 0;
  -webkit-background-clip: padding-box;
  -moz-border-radius: 0;
  -moz-background-clip: padding;
  border-radius: 0;
  background-clip: padding-box;
  border-bottom: 1px solid #ddd;
  border-left: none;
  border-right: none;
  clear: both;
  overflow: auto;
  padding: 8px;
}
.popover .popover-content ul li a {
  border: none;
  color: #333333;
  font-size: 13px;
  line-height: 22.75px;
  padding: 0;
}
.popover .popover-content ul li a:hover {
  background: #efefef;
}
.popover .popover-content ul li .icon-24 {
  display: inline-block;
  float: none;
  margin: 0 6px 0 0;
  vertical-align: middle;
  width: 25px;
}
.popover .popover-content ul li .titleAlt {
  color: #333333;
  display: inline-block;
  font-size: 13px;
  font-weight: normal;
  line-height: 1.5;
  vertical-align: middle;
  width: 330px;
}
.popover .popover-content ul li:first-child {
  border-top: none;
}
.popover .popover-content ul li:last-child {
  border-bottom: none;
}
.popover .popover-content ul li:last-child a {
  color: #337ab7;
  font-weight: normal;
}
.popover .popover-content ul li:hover {
  background-color: #efefef;
}

